- Create alias to imports be no more relative paths  - Fix bug on responsive layout (the gap of the main grip was in pixel and broking the page)

--- a/src/app/components/calendar/calendar.component.scss
+++ b/src/app/components/calendar/calendar.component.scss
@@ -4,7 +4,7 @@
   display: grid;
   grid-template-columns: repeat(7, 50px);
   grid-template-rows: 40px repeat(6, 50px);
-  gap: 15px;
+  gap: .4rem;
   width: auto;
   max-width: 600px;
   color: white;
